[package]
name = "das_woerterbuch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
rand = "0.8.5"
colored = "2.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
rustyline = "10.0.0"
bincode = "1.3.3"
serde = {version = "1.0.147", features = ["derive"]}